# tape

./: .gitignore  .release.toml  Cargo.toml  Makefile  README.md
api/: Cargo.toml
api/src/: consts.rs  curve.rs  error.rs  event.rs  instruction.rs  lib.rs  loaders.rs  macros.rs  pda.rs  sdk.rs  types.rs  utils.rs
api/src/state/: archive.rs  block.rs  epoch.rs  miner.rs  mod.rs  spool.rs  tape.rs  treasury.rs  writer.rs
cli/: Cargo.toml
cli/src/: cli.rs  keypair.rs  log.rs  main.rs
cli/src/commands/: admin.rs  claim.rs  info.rs  misc.rs  mod.rs  network.rs  read.rs  snapshot.rs  store.rs  write.rs
cli/src/utils/: fs.rs  mime.rs  mod.rs
client/: Cargo.toml
client/src/: consts.rs  lib.rs
client/src/mine/: claim.rs  mine.rs  mod.rs  register.rs
client/src/program/: advance.rs  initialize.rs  mod.rs
client/src/tape/: create.rs  encoding.rs  finalize.rs  header.rs  mod.rs  read.rs  write.rs
client/src/utils/: account.rs  ata.rs  block.rs  io.rs  mod.rs  retry.rs  rpc.rs
example/: Cargo.toml
example/src/: lib.rs
example/tests/: integration.rs
example/tests/utils/: mod.rs  svm.rs  tape.rs  token.rs
network/: Cargo.toml
network/benches/: tape_store_bench.rs
network/src/: archive.rs  block.rs  lib.rs  mine.rs  snapshot.rs  store.rs  web.rs
program/: Cargo.toml
program/src/: lib.rs
program/src/miner/: claim.rs  close.rs  mine.rs  mod.rs  register.rs
program/src/program/: advance.rs  initialize.rs
program/src/tape/: create.rs  finalize.rs  mod.rs  update.rs  write.rs
program/tests/: integration.rs
program/tests/utils/: mod.rs  svm.rs
