[workspace]
resolver = "2"
members = [ "api", "client", "cli", "network", "program", "example" ]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
homepage = "https://tapedrive.io"
description = "Your data, permanently recorded — uncensorable, uneditable, and here for good."
repository = "https://github.com/tapedrive-io/tape"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[workspace.dependencies]
tape-api = { version = "0.1.5", path = "../api" }
tape-client = { version = "0.1.5", path = "../client" }
tape-network = { version = "0.1.5", path = "../network" }
tape-program = { version = "0.1.5", path = "../program" }

# program dependencies
bytemuck = "1.14.3"
bytemuck_derive = "1.7.0"
num_enum = "0.7.2"
brine-tree = { version = "0.5.3", features = ["solana"] }
array-const-fn-init = "0.1.1"
const-crypto = "0.3.0"
crankx = { version = "0.2.2", features = ["solana"] }

# solana-specific
solana-client = "=2.1"
solana-program = "=2.1.16"
solana-sdk = "=2.1.16"
solana-transaction-status = "=2.1"
solana-account-decoder = "=2.1"
solana-transaction-status-client-types = "=2.1"

steel = { version="4.0.0", features = ["spl"] }
litesvm = "0.5.0"

mpl-token-metadata = "5.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6", features = [ "no-entrypoint" ] } 

# client-specific
anyhow = "1.0"
flate2 = "1.0"
sha3 = "0.10.8"
bincode = "1.3"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"

# cli-specific
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["default", "json",] }
indicatif = "0.17"
console = "0.15"

# network-specific
futures = "0.3"
rocksdb = "0.23.0"

[patch.crates-io]

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true
