[package]
name = "tapedrive"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

documentation = "https://docs.rs/tape-cli"

[[bin]]
name = "tapedrive"
path = "src/main.rs"

[dependencies]
tape-api.workspace = true
tape-client.workspace = true
tape-network.workspace = true

anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
clap.workspace = true
colored.workspace = true
dialoguer.workspace = true
dirs.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["default"] }
indicatif.workspace = true
console.workspace = true

solana-client.workspace = true
solana-sdk.workspace = true
