[package]
name = "tape-client"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

documentation = "https://docs.rs/tape-client"

[dependencies]
tape-api.workspace = true
steel.workspace = true
crankx.workspace = true

anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
chrono.workspace = true
flate2.workspace = true
num_enum.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
tokio.workspace = true

spl-token.workspace = true
spl-associated-token-account.workspace = true

solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-account-decoder.workspace = true
solana-transaction-status-client-types.workspace = true
