[package]
name = "tape-network"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

documentation = "https://docs.rs/tape-network"

[dependencies]
tape-api.workspace = true
tape-client.workspace = true
crankx.workspace = true
brine-tree.workspace = true
reqwest.workspace = true

anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
chrono.workspace = true
flate2.workspace = true
num_enum.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
tokio.workspace = true
bytemuck.workspace = true
rocksdb.workspace = true

solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-account-decoder.workspace = true
solana-transaction-status-client-types.workspace = true
thiserror = "2.0.12"
axum = "0.8.4"
num_cpus = "1.17.0"

[dev-dependencies]
tempdir = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "tape_store_bench"
harness = false
