[package]
name = "tape-program"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "tape"

[features]
default = []

[dependencies]
crankx.workspace = true
mpl-token-metadata.workspace = true
tape-api.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true
brine-tree.workspace = true

# Fix for issues with `build-sbf` rustc being on `1.79-dev`
bytemuck_derive=">=1.8.1, <1.9.0"
half = "=2.4.1"

[dev-dependencies]
bincode = "1.3"
solana-sdk = "2.1.0"
litesvm = "0.5.0"
litesvm-token = "0.5.0"
pretty-hex = "0.4.1"
rand = "0.8.5"
solana-compute-budget = "2.1.16"
